# Irrlicht

./: .gitignore  CMakeLists.txt
examples/: BuildAllExamples_vc10.sln  BuildAllExamples_vc11.sln  BuildAllExamples_vc12.sln
examples/01.HelloWorld/: HelloWorld_vc11.vcxproj  HelloWorld_vc12.vcxproj
examples/02.Quake3Map/: Quake3Map_vc11.vcxproj  Quake3Map_vc12.vcxproj  main.cpp
examples/03.CustomSceneNode/: CustomSceneNode_vc11.vcxproj  CustomSceneNode_vc12.vcxproj  main.cpp
examples/04.Movement/: Movement_vc11.vcxproj  Movement_vc12.vcxproj
examples/05.UserInterface/: UserInterface_vc11.vcxproj  UserInterface_vc12.vcxproj  main.cpp
examples/06.2DGraphics/: 2DGraphics_vc11.vcxproj  2DGraphics_vc12.vcxproj
examples/07.Collision/: Collision_vc11.vcxproj  Collision_vc12.vcxproj  main.cpp
examples/08.SpecialFX/: SpecialFX_vc11.vcxproj  SpecialFX_vc12.vcxproj  main.cpp
examples/09.Meshviewer/: Meshviewer_vc11.vcxproj  Meshviewer_vc12.vcxproj  main.cpp
examples/10.Shaders/: Shaders_vc11.vcxproj  Shaders_vc12.vcxproj  main.cpp
examples/11.PerPixelLighting/: PerPixelLighting_vc11.vcxproj  PerPixelLighting_vc12.vcxproj  main.cpp
examples/12.TerrainRendering/: TerrainRendering_vc11.vcxproj  TerrainRendering_vc12.vcxproj  main.cpp
examples/13.RenderToTexture/: RenderToTexture_vc11.vcxproj  RenderToTexture_vc12.vcxproj
examples/14.Win32Window/: Win32Window_vc11.vcxproj  Win32Window_vc12.vcxproj  main.cpp
examples/15.LoadIrrFile/: LoadIrrFile_vc11.vcxproj  LoadIrrFile_vc12.vcxproj
examples/16.Quake3MapShader/: Quake3MapShader_vc11.vcxproj  Quake3MapShader_vc12.vcxproj  main.cpp
examples/17.HelloWorld_Mobile/: 17. HelloWorld for Windows Mobile on PC_vc11.vcxproj  17. HelloWorld for Windows Mobile on PC_vc12.vcxproj  main.cpp
examples/18.SplitScreen/: SplitScreen_vc11.vcxproj  SplitScreen_vc12.vcxproj  main.cpp
examples/19.MouseAndJoystick/: MouseAndJoystick_vc11.vcxproj  MouseAndJoystick_vc12.vcxproj
examples/20.ManagedLights/: ManagedLights_vc11.vcxproj  ManagedLights_vc12.vcxproj
examples/21.Quake3Explorer/: Quake3Explorer_vc11.vcxproj  Quake3Explorer_vc12.vcxproj  main.cpp  q3factory.cpp
examples/22.MaterialViewer/: MaterialViewer_vc11.vcxproj  MaterialViewer_vc12.vcxproj  main.cpp
examples/23.SMeshHandling/: SMeshHandling_vc11.vcxproj  SMeshHandling_vc12.vcxproj  main.cpp
examples/24.CursorControl/: CursorControl_vc11.vcxproj  CursorControl_vc12.vcxproj
examples/25.XmlHandling/: XmlHandling_vc11.vcxproj  XmlHandling_vc12.vcxproj  main.cpp
examples/26.OcclusionQuery/: OcclusionQuery_vc11.vcxproj  OcclusionQuery_vc12.vcxproj
examples/29.HardwareSkinning/: HardwareSkinning_vc10.vcxproj  HardwareSkinning_vc11.vcxproj  HardwareSkinning_vc12.vcxproj  Makefile
examples/30.Profiling/: Makefile  Profiling_vc12.vcxproj  main.cpp
examples/31.HardwareInstancing/: HardwareInstancing_vc10.vcxproj  HardwareInstancing_vc11.vcxproj  HardwareInstancing_vc12.vcxproj
examples/Demo/: CDemo.cpp  CMainMenu.cpp  Demo_vc11.vcxproj  Demo_vc12.vcxproj  main.cpp
include/: IMeshManipulator.h  irrArray.h
scripts/doc/irrlicht/: doxygen-pdf.cfg  doxygen.cfg  footer.html  makedocumentation.bat
source/Irrlicht/: CD3D11Driver.cpp  Irrlicht10.0.vcxproj  Irrlicht10.0.vcxproj.filters  Irrlicht11.0.vcxproj  Irrlicht11.0.vcxproj.filters  Irrlicht12.0.vcxproj
tests/: 2dmaterial.cpp  Makefile  anti-aliasing.cpp  archiveReader.cpp  b3dAnimation.cpp  billboards.cpp  burningsVideo.cpp  coreutil.cpp  createImage.cpp  draw2DImage.cpp  drawPixel.cpp  drawRectOutline.cpp  drawVertexPrimitive.cpp  fast_atof.cpp  flyCircleAnimator.cpp  guiDisabledMenu.cpp  ioScene.cpp  irrArray.cpp  irrString.cpp  lightMaps.cpp  lights.cpp  main.cpp  makeColorKeyTexture.cpp  material.cpp  matrixOps.cpp  md2Animation.cpp  meshTransform.cpp  mrt.cpp  orthoCam.cpp  planeMatrix.cpp  projectionMatrix.cpp  renderTargetTexture.cpp  sceneCollisionManager.cpp  screenshot.cpp  serializeAttributes.cpp  softwareDevice.cpp  stencilshadow.cpp  testGeometryCreator.cpp  testQuaternion.cpp  testUtils.cpp  (+13 more)
tools/GUIEditor/: CGUIEditWindow.cpp  GUI Editor_vc11.vcxproj  GUI Editor_vc12.vcxproj  main.cpp
tools/IrrFontTool/newFontTool/: CVectorFontTool.h  irrFontTool_vc11.vcxproj  irrFontTool_vc12.vcxproj
tools/MeshConverter/: MeshConverter_vc11.vcxproj  MeshConverter_vc12.vcxproj  main.cpp
